# zero2prod

./: .env  Cargo.toml  Dockerfile  README.md  configuration.yml  spec.yml
.github/workflows/: audit.yml  general.yml
configuration/: base.yml
migrations/: 20211110230330_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
